<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Application-->
    <string name="app_name">Терминал сбора данных</string>
    <string name="service_tradehouse">Сервис обмена с TradeHouse</string>
    <string name="CHANNEL_ID">tradehouse.notification.service</string>
    <string name="serviceNotification">Открыть менеджер обмена с TradeHouse</string>

    <string name="create">Создать</string>
    <string name="add">Добрать</string>
    <string name="edit">Править</string>
    <string name="delete">Удалить</string>
    <string name="save">Записать</string>
    <string name="send">Отослать</string>
    <string name="exchange">Получить</string>
    <string name="close">Закрыть</string>
    <string name="zero_value">0,00 ₽</string>
    <string name="confirmation">Подтвердите</string>
    <string name="deletion">Удаляется</string>
    <string name="duplicate">Дубликат</string>
    <string name="exception">Ошибка</string>
    <string name="success">Успешно</string>

    <string-array name="document_filters">
        <item>*|Документы и инвентариз.</item>
        <item>Inv,InvIntroduce,InvMarks|Инвентаризации</item>
        <item>Introduce,UTD,IntPurchWB,IntSalesWB,ExtPurchWB,ExtSalesWB|Документы</item>
        <item>IntPurchWB,IntSalesWB,ExtPurchWB,ExtSalesWB|Накладные</item>
        <item>IntPurchWB|Внутренние приходные н.</item>
        <item>IntSalesWB|Внутренние расходные н.</item>
        <item>ExtPurchWB|Внешние приходные накл.</item>
        <item>ExtSalesWB|Внешние расходные накл.</item>
        <item>Introduce,UTD|ЭДО</item>
        <!--
        <item>InvMarks|Инвентаризация с маркировкой</item>
        <item>InvIntroduce|Инвентар./Первоначальный ввод</item>
        <item>Introduce|Первоначальный ввод</item>
        <item>UTD|Приход УТД</item>
        -->
    </string-array>

    <!--MainActivity-->
    <string name="mainmenu_invoices">1. Накладные</string>
    <string name="mainmenu_inventories">2. Инвентаризации</string>
    <string name="mainmenu_pricecontrol">3. Контроль цен</string>
    <string name="mainmenu_dictionaries">4. Обновление справочников</string>
    <string name="mainmenu_settings">5. Настройки</string>

    <!--InvoicesActivity-->
    <string name="invoice_selector">Фильтр</string>
    <string name="invoice_summary">Общая сумма</string>
    <string name="invoice_number">Документ</string>
    <string name="invoice_type">Тип накладной</string>
    <string name="invoice_contragent">Контрагент</string>
    <string name="invoice_price">Цена</string>
    <string name="invoice_amount_doc">Документарно</string>
    <string name="invoice_amount_fact">Фактически</string>

    <string-array name="invoice_types">
        <item>Inv|Инвентаризация|и</item>
        <item>InvMarks|Инвентаризация с маркировкой|И</item>
        <item>InvIntroduce|Инвентар. первоначальный ввод|i</item>
        <item>IntPurchWB|Накладная внутренняя приходная|п</item>
        <item>IntSalesWB|Накладная внутренняя расходная|р</item>
        <item>ExtPurchWB|Накладная внешняя приходная|П</item>
        <item>ExtSalesWB|Накладная внешняя расходная|Р</item>
        <item>Introduce|Первоначальный ввод|I</item>
        <item>UTD|Приход УТД|U</item>
    </string-array>

    <!--CreationActivity-->
    <string name="creation_types">IntSalesWB,ExtPurchWB,ExtSalesWB,Introduce,UTD</string>

    <!--BarcodeHandler-->
    <string name="barcode_box">всем</string>

    <!--BarcodeModel-->
    <string name="msg_data_incorrect">Некорректный формат введенных данных</string>
    <string name="msg_bar_incorrect">Сканирован неверный штрих-код</string>
    <string name="msg_bar_not_found">Штрих-код не найден! Обновите справочники товаров</string>
    <string name="msg_quantity_mismatch">Фактическое количество не должно быть больше документарного</string>
    <string name="msg_not_allowed">Товар не подлежит приемке, т.к. не прошел проверку на корректность</string>
    <string name="msg_good_absent">Товар отсутствует в документе</string>
    <string name="msg_mark_absent">Марка отсутствует в документе</string>
    <string name="msg_mark_line_absent">Марка отсутствует в документе по выбранной линии</string>
    <string name="msg_mark_line_wrong">Марка не принадлежит выбранной линии</string>
    <string name="msg_already_scanned">Марка уже просканирована</string>
    <string name="msg_already_accepted">Марка уже присутствует в документе</string>
    <string name="msg_scan_pack">Сканируйте упаковку</string>
    <string name="msg_scan_item">Сканируйте пачку блока</string>
    <string name="msg_pack_only">Допустимо только полное сканирование блока</string>
    <string name="msg_ungroupped">Упаковка разгруппирована</string>
    <string name="msg_pack_wrong">Пачка принадлежит другому блоку</string>
    <string name="msg_grayzone">Маркировка серой зоны. Сканируйте в режиме редактирования документа</string>
    <string name="msg_pack_unable">Невозможно распределить пачку в блоке</string>

    <!--BarcodeActivity-->
    <string name="barcode_prompt">Сканируйте или введите штрих-код</string>
    <string name="barcode_price">Цена (нажмите для сканирования)</string>

    <!--SettingsActivity-->
    <string name="setting_general">Основные</string>
    <string name="setting_options">Опции</string>
    <string name="setting_timeouts">Таймауты</string>

    <string name="setting_serial">Серийный номер</string>
    <string name="setting_user">Оператор</string>
    <string name="setting_object">Объект</string>
    <string name="setting_connect">Параметры подключения</string>
    <string name="setting_tethering">USB соединение</string>
    <string name="setting_check">Подключить</string>

    <string name="option_offline">Оффлайн-режим</string>
    <string name="option_loadinv">Загружать накладные</string>
    <string name="option_lines">Линий на страницу</string>
    <string name="option_marks">Помарочный учет</string>
    <string name="option_prefixes">Префиксы вес. баркодов</string>

    <string name="delay_connect">Подключения</string>
    <string name="delay_check">Проверки настроек</string>
    <string name="delay_load">Загрузки справочников</string>
    <string name="delay_send">Отправки документов</string>

    <!--
        <integer-array name="document_types_drawable">
            <item>@android:drawable/presence_video_online</item>
            <item>@android:drawable/presence_video_busy</item>
            <item>@android:drawable/presence_video_away</item>
            <item>@android:drawable/presence_audio_online</item>
            <item>@android:drawable/presence_audio_busy</item>
            <item>@android:drawable/presence_audio_away</item>
            <item>@android:drawable/ic_notification_overlay</item>
            <item>@android:drawable/presence_online</item>
            <item>@android:drawable/presence_busy</item>
            <item>@android:drawable/presence_away</item>
            <item>@android:drawable/btn_star_big_on</item>
            <item>@android:drawable/stat_sys_phone_call_on_hold</item>
            <item>@android:drawable/stat_sys_vp_phone_call_on_hold</item>
            <item>@android:drawable/stat_sys_phone_call_forward</item>
            <item>@android:drawable/stat_sys_vp_phone_call</item>
            <item>@android:drawable/stat_notify_missed_call</item>
            <item>@android:drawable/sym_call_outgoing</item>
            <item>@android:drawable/sym_call_missed</item>
            <item>@android:drawable/sym_call_incoming</item>
            <item>@android:drawable/sym_action_call</item>
            <item>@android:drawable/checkbox_on_background</item>
            <item>@android:drawable/checkbox_off_background</item>
            <item>@android:drawable/radiobutton_on_background</item>
            <item>@android:drawable/radiobutton_off_background</item>
            <item>@android:drawable/picture_frame</item>
            <item>@android:drawable/ic_secure</item>
            <item>@android:drawable/ic_search_category_default</item>
            <item>@android:drawable/ic_popup_reminder</item>
            <item>@android:drawable/ic_popup_disk_full</item>
            <item>@android:drawable/ic_partial_secure</item>
            <item>@android:drawable/stat_sys_download_done</item>
            <item>@android:drawable/stat_sys_data_bluetooth</item>
            <item>@android:drawable/stat_notify_voicemail</item>
            <item>@android:drawable/stat_notify_sync</item>
            <item>@android:drawable/stat_notify_sync_noanim</item>
            <item>@android:drawable/stat_notify_sdcard_usb</item>
            <item>@android:drawable/stat_notify_sdcard_prepare</item>
            <item>@android:drawable/stat_notify_more</item>
            <item>@android:drawable/stat_notify_chat</item>
            <item>@android:drawable/stat_notify_error</item>
            <item>@android:drawable/stat_sys_warning</item>
            <item>@android:drawable/stat_sys_upload_done</item>
            <item>@android:drawable/presence_offline</item>
            <item>@android:drawable/presence_invisible</item>
            <item>@android:drawable/ic_notification_clear_all</item>
            <item>@android:drawable/ic_menu_zoom</item>
            <item>@android:drawable/ic_menu_week</item>
            <item>@android:drawable/ic_menu_view</item>
            <item>@android:drawable/ic_menu_upload_you_tube</item>
            <item>@android:drawable/ic_menu_today</item>
            <item>@android:drawable/ic_menu_sort_by_size</item>
            <item>@android:drawable/ic_menu_sort_alphabetically</item>
            <item>@android:drawable/ic_menu_slideshow</item>
            <item>@android:drawable/ic_menu_share</item>
            <item>@android:drawable/ic_menu_set_as</item>
            <item>@android:drawable/ic_menu_send</item>
            <item>@android:drawable/ic_menu_search</item>
            <item>@android:drawable/ic_menu_save</item>
            <item>@android:drawable/ic_menu_rotate</item>
            <item>@android:drawable/ic_menu_revert</item>
            <item>@android:drawable/ic_menu_report_image</item>
            <item>@android:drawable/ic_menu_recent_history</item>
            <item>@android:drawable/ic_menu_preferences</item>
            <item>@android:drawable/ic_menu_myplaces</item>
            <item>@android:drawable/ic_menu_mylocation</item>
            <item>@android:drawable/ic_menu_my_calendar</item>
            <item>@android:drawable/ic_menu_more</item>
            <item>@android:drawable/ic_menu_month</item>
            <item>@android:drawable/ic_menu_mapmode</item>
            <item>@android:drawable/ic_menu_manage</item>
            <item>@android:drawable/ic_menu_info_details</item>
            <item>@android:drawable/ic_menu_help</item>
            <item>@android:drawable/ic_menu_gallery</item>
            <item>@android:drawable/ic_menu_edit</item>
            <item>@android:drawable/ic_menu_directions</item>
            <item>@android:drawable/ic_menu_delete</item>
            <item>@android:drawable/ic_menu_day</item>
            <item>@android:drawable/ic_menu_crop</item>
            <item>@android:drawable/ic_menu_compass</item>
            <item>@android:drawable/ic_menu_close_clear_cancel</item>
            <item>@android:drawable/ic_menu_camera</item>
            <item>@android:drawable/ic_menu_call</item>
            <item>@android:drawable/ic_menu_always_landscape_portrait</item>
            <item>@android:drawable/ic_menu_agenda</item>
            <item>@android:drawable/ic_menu_add</item>
            <item>@android:drawable/ic_media_rew</item>
            <item>@android:drawable/ic_media_ff</item>
            <item>@android:drawable/ic_media_previous</item>
            <item>@android:drawable/ic_media_next</item>
            <item>@android:drawable/ic_media_play</item>
            <item>@android:drawable/ic_media_pause</item>
        </integer-array>
    -->
</resources>
