<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonInvoices"
        android:theme="@style/Widget.Button.MainMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableStart="@drawable/main_1_wb"
        android:paddingStart="@dimen/main_padding"
        android:paddingEnd="@dimen/main_padding"
        android:text="@string/mainmenu_invoices" />
    <Button
        android:id="@+id/buttonInventories"
        android:theme="@style/Widget.Button.MainMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableStart="@drawable/main_2_inv"
        android:paddingStart="@dimen/main_padding"
        android:paddingEnd="@dimen/main_padding"
        android:text="@string/mainmenu_inventories" />
    <Button
        android:id="@+id/buttonPricecontrol"
        android:theme="@style/Widget.Button.MainMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableStart="@drawable/main_3_price"
        android:paddingStart="@dimen/main_padding"
        android:paddingEnd="@dimen/main_padding"
        android:text="@string/mainmenu_pricecontrol" />
    <Button
        android:id="@+id/buttonDictionaries"
        android:theme="@style/Widget.Button.MainMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableStart="@drawable/main_4_upd"
        android:paddingStart="@dimen/main_padding"
        android:paddingEnd="@dimen/main_padding"
        android:text="@string/mainmenu_dictionaries" />
    <Button
        android:id="@+id/buttonSettings"
        android:theme="@style/Widget.Button.MainMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableStart="@drawable/main_5_settings"
        android:paddingStart="@dimen/main_padding"
        android:paddingEnd="@dimen/main_padding"
        android:text="@string/mainmenu_settings" />
</LinearLayout>