<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/labelNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editNumber"
            android:text="@string/invoice_number" />

        <EditText
            android:id="@+id/editNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:maxLength="@integer/invoice_code_length_max"
            android:inputType="number" />

        <TextView
            android:id="@+id/labelDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/zero_value" />
    </LinearLayout>

    <ListView
        android:id="@+id/listInvoice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invoice_summary" />

        <TextView
            android:id="@+id/editSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/zero_value" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/invc_pagging"
            android:drawablePadding="@dimen/invc_spacing"
            android:text="@string/add"
            android:drawableTop="@android:drawable/gallery_thumb" />
        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/invc_pagging"
            android:drawablePadding="@dimen/invc_spacing"
            android:text="@string/edit"
            android:drawableTop="@android:drawable/gallery_thumb" />
        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/invc_pagging"
            android:drawablePadding="@dimen/invc_spacing"
            android:text="@string/save"
            android:drawableTop="@android:drawable/gallery_thumb" />
        <Button
            android:id="@+id/buttonSend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/invc_pagging"
            android:drawablePadding="@dimen/invc_spacing"
            android:text="@string/send"
            android:drawableTop="@android:drawable/gallery_thumb" />
    </LinearLayout>
</LinearLayout>