<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/labelBarcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editBarcode"
        android:text="@string/barcode_prompt" />

    <AutoCompleteTextView
        android:id="@+id/editBarcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:completionThreshold="@integer/barcode_autocompletion" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:maxLines="3"
        android:minLines="2"
        android:focusable="false" />

    <TextView
        android:id="@+id/labelPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/buttonPrice"
        android:text="@string/barcode_price" />

    <Button
        android:id="@+id/buttonPrice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="@dimen/barc_price"
        android:focusable="false"
        android:text="@string/zero_value" />
</LinearLayout>