<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textExchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/service_tradehouse" />
    </LinearLayout>

    <ListView
        android:id="@+id/listResponse"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonClose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/invc_pagging"
            android:drawablePadding="@dimen/invc_spacing"
            android:text="@string/close"
            android:drawableTop="@drawable/common_2_cancel" />
        <Button
            android:id="@+id/buttonSend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/invc_pagging"
            android:drawablePadding="@dimen/invc_spacing"
            android:enabled="false"
            android:text="@string/send"
            android:drawableTop="@drawable/saved_3_repeat" />
    </LinearLayout>
</LinearLayout>